--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+__ngcc_entry_points__.json
+
 # compiled output
 /dist
 /tmp
