--- a/package.json
+++ b/package.json
@@ -5,23 +5,16 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:lib": "ng build data-view-angular",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.6",
-    "@angular/common": "~9.1.6",
-    "@angular/compiler": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "date-fns": "^2.10.0",
+    "ngx-quicklink": "^0.2.1",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
@@ -31,6 +24,25 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@angular/animations": "~9.1.6",
+    "@angular/common": "~9.1.6",
+    "@angular/compiler": "~9.1.6",
+    "@angular/core": "~9.1.6",
+    "@angular/forms": "~9.1.6",
+    "@angular/language-service": "^9.0.0",
+    "@angular/platform-browser": "~9.1.6",
+    "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/platform-server": "^9.0.0",
+    "@angular/router": "~9.1.6",
+    "@angular/service-worker": "^9.0.0",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-angular": "^8.1.0",
+    "immer": "^6.0.1",
+    "intersection-observer": "^0.7.0",
+    "prettier": "^2.0.2",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
