--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^9.2.2",
     "date-fns": "^2.10.0",
     "ngx-quicklink": "^0.2.1",
     "resize-observer-polyfill": "^1.5.1"
