chore: core module

--- a/projects/data-view-angular/tsconfig.lib.json
+++ b/projects/data-view-angular/tsconfig.lib.json
@@ -16,6 +16,7 @@
     "strictMetadataEmit": true,
     "enableResourceInlining": true
   },
+  "files": ["./data-view-angular.module.ts"],
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
