--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     ],
     "paths": {
       "data-view-angular": [
-        "dist/data-view-angular/data-view-angular",
-        "dist/data-view-angular"
+        "projects/data-view-angular/data-view-angular",
+        "projects/data-view-angular"
       ]
     }
   },
