--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,9 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "data-view-angular": [
-        "projects/data-view-angular/data-view-angular",
-        "projects/data-view-angular"
-      ]
+      "data-view-angular/*": ["projects/data-view-angular/*"]
     }
   },
   "angularCompilerOptions": {
