--- a/projects/data-view-angular/tsconfig.json
+++ b/projects/data-view-angular/tsconfig.json
@@ -1,7 +1,6 @@
 // Configuration for IDEs only.
-
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": ".",
